Screen previews overflow fixed

--- a/authoring-tool/css/poi-preview.css
+++ b/authoring-tool/css/poi-preview.css
@@ -64,11 +64,15 @@
 .preview-screen .content .preview-img {
 	max-width: 189px;
 	margin-bottom: 10px;
+	max-height: 190px;
 }
 
 .preview-screen .content .preview-text {
 	font-size: 0.8em;
 	text-align: left;
+	height: 165px;
+    overflow: scroll;
+    max-height:170px;
 }
 
 .preview-screen a#editMinigames {
